🔧 認定証URLをVercelデプロイ先に変更
- QRコード生成URL: https://flash-event.vercel.app/certificate.html
- 認定証ページのリンクテキストも更新

--- a/certificate.html
+++ b/certificate.html
@@ -231,7 +231,7 @@
         
         <div class="certificate-footer">
             <div>
-                <a href="https://tsukuriteidea.com/" class="site-link">ツクリテイデア</a>
+                <a href="https://flash-event.vercel.app/" class="site-link">フラッシュ暗算ゲーム</a>
             </div>
             <div style="margin-top: 10px; font-size: 12px; color: #999;">
                 暗算フラッシュ練習アプリ
