CSSコミケ風に

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 <body>
     <div class="container">
-        <header id="HeaderDisplay">
+        <!-- データストリーム背景エフェクト -->
+        <div class="data-stream"></div>
+        
+        <header id="HeaderDisplay" class="laser-beam">
             １０級 : 2桁 2口 4秒
         </header>
 
         <div id="progressDisplay">問題 1/5 | 正解: 0</div>
 
-        <div id="mondai"></div>
+        <div id="mondai" class="hologram"></div>
 
-        <button id="StartButton">START</button>
+        <button id="StartButton" class="neon-glow">START</button>
 
         <div id="menu">
             <div class="menu-section">
@@ -173,6 +176,7 @@
 
         <footer class="event-footer">
             <p>ツクリテイデア - フラッシュ暗算ゲーム</p>
+            <p>🎆 CYBER FLASH CALCULATION GAME 🎆</p>
             <p><a href="https://tsukuriteidea.com" target="_blank">https://tsukuriteidea.com</a></p>
         </footer>
     </div>
