--- a/certificate.html
+++ b/certificate.html
@@ -36,11 +36,12 @@
         }
         
         .certificate-header {
-            background: linear-gradient(45deg, #ff6b6b, #ffa500);
+            background: linear-gradient(45deg, #ff0080, #00ffff);
             color: white;
             text-align: center;
             padding: 30px 20px;
             position: relative;
+            box-shadow: 0 0 30px rgba(255, 0, 128, 0.5);
         }
         
         .certificate-header::before {
