CSSツクリテイデアのサイトのように

--- a/certificate.html
+++ b/certificate.html
@@ -14,8 +14,11 @@
         }
         
         body {
-            font-family: 'Inter', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            font-family: 'M PLUS Rounded 1c', 'Noto Sans JP', sans-serif;
+            background: 
+                radial-gradient(circle at 20% 30%, #ff6b9d 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, #ffa726 0%, transparent 50%),
+                linear-gradient(135deg, #ffb7c5 0%, #ff8a80 50%, #ffa726 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
